--- a/TAO/orbsvcs/tests/EC_Mcast/Makefile
+++ b/TAO/orbsvcs/tests/EC_Mcast/Makefile
@@ -246,7 +246,7 @@ include $(ACE_ROOT)/include/makeinclude/rules.bin.GNU
   $(TAO_ROOT)/tao/DomainC.i \
   $(TAO_ROOT)/tao/WrongTransactionC.h \
   $(TAO_ROOT)/tao/WrongTransactionC.i \
-  $(TAO_ROOT)/tao/ObjectIdListCC.h \
+  $(TAO_ROOT)/tao/ObjectIdListC.h \
   $(TAO_ROOT)/tao/StringSeqC.h \
   $(TAO_ROOT)/tao/StringSeqC.i \
   $(TAO_ROOT)/tao/PortableInterceptorC.h \
