*** empty log message ***
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk@49539 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ace/Makefile.ace
+++ b/ace/Makefile.ace
@@ -117,6 +117,7 @@ CONNECTION_FILES = \
 SOCKETS_FILES = \
   Addr \
   INET_Addr \
+  Multihomed_INET_Addr \
   IPC_SAP \
   LSOCK \
   LSOCK_Acceptor \
@@ -133,6 +134,9 @@ SOCKETS_FILES = \
   SOCK_Dgram_Bcast \
   SOCK_Dgram_Mcast \
   SOCK_IO \
+  SOCK_SEQPACK_Acceptor \
+  SOCK_SEQPACK_Association \
+  SOCK_SEQPACK_Connector \
   SOCK_Stream
 IPC_FILES = \
   ATM_Addr \
